--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "teste.js",
   "scripts": {
+    "start" : "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -33,11 +34,14 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "mongodb-memory-server": "^6.5.1",
+    "sucrase": "^3.17.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/express": "^4.17.11",
     "bcrypt": "^5.0.0",
+    "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "validator": "^13.5.2"
   }
