--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "teste.js",
   "scripts": {
-    "start" : "sucrase-node src/main/server.ts",
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -21,6 +21,7 @@
     "@types/jest": "^26.0.16",
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.10",
+    "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "eslint": "^6.8.0",
@@ -35,6 +36,7 @@
     "lint-staged": "^10.5.3",
     "mongodb-memory-server": "^6.5.1",
     "sucrase": "^3.17.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
