--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/express": "^4.17.11",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
+    "fast-glob": "^3.2.4",
     "mongodb": "^3.6.3",
     "validator": "^13.5.2"
   }
