--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.0",
   "description": "",
   "engines": {
-    "node": "15.0.1",
-    "npm": "7.6.2"
+    "node": "15.x",
+    "npm": "7.6.3"
   },
   "scripts": {
     "start": "node dist/main/server.js",
