--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc",
-    "dev": "sucrase-node src/main/server.ts",
+    "up": "npm run build && docker-compose up -d",
+    "down": "docker-compose down",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -42,7 +43,6 @@
     "lint-staged": "^10.5.3",
     "mongodb-memory-server": "^6.5.1",
     "rimraf": "^2.6.3",
-    "sucrase": "^3.17.0",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
@@ -53,6 +53,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
+    "npm": "^7.6.3",
     "validator": "^13.5.2"
   }
 }
