--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mongo:4
     restart: always
     volumes:
-      - ./data:/data/db
+      - ./data:/data/db:rw
     ports:
       - "27017:27017"
   api:
@@ -16,8 +16,10 @@ services:
     command: npm start
     volumes:
       - ./dist:/usr/src/clean-node-api/dist
+      - ./package.json:/usr/src/clean-node-api/package.json
     ports:
       - "5050:5050"
+      - "9222:9222"
     links:
       - mongo
     
