--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "target": "es2019",
     "esModuleInterop": true,
-    "inlineSourceMap": true
+    "sourceMap": true
   },
   "include": [
     "src"
