--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.1",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "coveralls": "^3.1.0",
@@ -62,6 +63,7 @@
     "mongodb": "^3.6.3",
     "nodemon": "^2.0.7",
     "npm": "^7.6.3",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.5.2"
   },
   "_moduleAliases": {
